--- a/index.html
+++ b/index.html
@@ -5,10 +5,83 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BandSite</title>
 </head>
 
 <body>
+    <!-----------------------------header--------------------------------->
+    <header class="header">
+        <span class="header__cite-name">BANDSITE</span>
+        <nav class="header__navigation">
+            <ul class="header__menu">
+                <li class="header__menu-item">
+                    <a class="header__menu-item-link" href="#">Biography</a>
+                </li>
+                <li class="header__menu-item">
+                    <a class="header__menu-item-link" href="#">Shows</a>
+                </li>
+            </ul>
+        </nav>
+
+    </header>
+
+    <!-----------------------------main--------------------------------->
+
+    <main class="main">
+
+        <section class="main__photo">
+            <h3 class="main__photo--title">
+                The Bees Knees
+            </h3>
+        </section>
+
+        <article class="main__first">
+            <h3 class="main__first--title"> About the Musicians</h3>
+            <img src="./assets/images/band.jpg" alt="band" class="main__first--img">
+
+            <p class="main__container--content"> "We push each other to be the best. It’s not uncommon for one of us to
+                say ‘this needs to be better, back to the
+                drawing board’"- Bryan Teddy, lead vocalist of The Bees</p>
+
+        </article>
+
+        <article class="main__second">
+            <h3> The Bees Knees</h3>
+            <p>The Bees Knees is a pop rock band originating from San Francisco, California. The band consists of lead
+                vocalist Bryan
+                Teddy, guitarist Mack Tolkens, guitarist Andrew Green, bassist Kent Zulkee and drummer Freddie Fischer.
+                The band
+                achieved its first commercial success as an unsigned act, drawing attention from manager Cam Adams.
+                Having worked with
+                other popular acts (The Elephant In The Room, One Trick Pony, The Cat’s Meow), Adams was confident the
+                band could
+                succeed even further, pushing them to sign with Magenta Records.
+
+                From there, the band has soared, gaining international recognition and ranking in the top 10 on the
+                Poster Charts. New
+                fans immediately fell in love with the band’s original and organic attitude, solidifying their place as
+                one of the
+                hottest and fastest up and coming acts of this century. Fans affectionately refer to themselves as “The
+                Hive” and are
+                drawn to their candid and authentic performances on stage. Looking forward to touring in the future, The
+                Bees Knees are
+                currently recording their second studio album, looking to be released in late 2021.</p>
+        </article>
+
+
+        <section class="main__gallery">
+
+        </section>
+
+    </main>
+
+    <!-----------------------------main--------------------------------->
+
+
+    <footer class="footer">
+
+    </footer>
+
 
 </body>
 
