--- a/index.html
+++ b/index.html
@@ -5,37 +5,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/bio.css">
     <title>BandSite</title>
 </head>
 
 <body>
     <!-----------------------------header--------------------------------->
     <header class="header">
-        <span class="header__cite-name">BANDSITE</span>
-        <nav class="header__navigation">
+        <div class="header__top">
+            <span class="header__logo-name">BANDSITE</span>
+        </div>
+
+        <nav class="header__navigation bottom">
             <ul class="header__menu">
-                <li class="header__menu-item">
-                    <a class="header__menu-item-link" href="#">Biography</a>
+                <li class="header__menu-item left">
+                    <a class="header__menu-item-link active" href="#">Biography</a>
                 </li>
-                <li class="header__menu-item">
+                <li class="header__menu-item right">
                     <a class="header__menu-item-link" href="#">Shows</a>
                 </li>
             </ul>
         </nav>
-
     </header>
 
     <!-----------------------------main--------------------------------->
-
+    <!-----------------------------hero--------------------------------->
     <main class="main">
 
-        <section class="main__photo">
-            <h3 class="main__photo--title">
-                The Bees Knees
-            </h3>
-        </section>
+        <section class="hero">
+            <div class="cover">
 
+                <h3 class="cover__title">
+                    The Bees Knees
+                </h3>
+
+            </div>
+        </section>
         <article class="main__first">
+
+            <!-----------------------------main part--------------------------------->
             <h3 class="main__first--title"> About the Musicians</h3>
             <img src="./assets/images/band.jpg" alt="band" class="main__first--img">
 
@@ -46,8 +54,9 @@
         </article>
 
         <article class="main__second">
-            <h3> The Bees Knees</h3>
-            <p>The Bees Knees is a pop rock band originating from San Francisco, California. The band consists of lead
+            <h3 class="main__second--header"> The Bees Knees</h3>
+            <p class="main__second--content">The Bees Knees is a pop rock band originating from San Francisco,
+                California. The band consists of lead
                 vocalist Bryan
                 Teddy, guitarist Mack Tolkens, guitarist Andrew Green, bassist Kent Zulkee and drummer Freddie Fischer.
                 The band
@@ -79,6 +88,55 @@
 
 
     <footer class="footer">
+        <div class="footer__first">
+            <h3 class="social__title">Get in Touch</h3>
+
+            <a target="_blank" href="https://www.instagram.com/">
+                <img src="./assets/icons/Icon-instagram.svg" class="social__icon--item">
+            </a>
+            <a target="_blank" href="https://facebook.com/">
+                <img src="./assets/icons/Icon-facebook.svg" class="social__icon--item" class="extra">
+            </a>
+            <a target="_blank" href="hhtp://twitter.com">
+                <img src="./assets/icons/Icon-twitter.svg" alt="icon-twitter" class="social__icon--item">
+            </a>
+
+        </div>
+
+        <div class="footer__second">
+            <h>The Bees Knees Management </h>
+            <p> 503 Broadway Penthouse,
+
+                New York, NY 10012, USA
+
+                info@thebeesknees.com</p>
+        </div>
+
+        <div class="footer__third">
+            <h> Limitless Artist Group</h>
+
+            <p> Booking Agent for
+
+                US / South America / Japan
+
+                pearl.gregg@limitlessag.com</p>
+
+        </div>
+
+        <div class="footer__fourth">
+            ARCH Entertainment
+
+            Booking Agent for
+
+            UK / EU / AU
+
+            cwhyte@archentertainment.com
+        </div>
+
+        <div class="footer__fifth">
+
+
+        </div>
 
     </footer>
 
