--- a/index.html
+++ b/index.html
@@ -12,20 +12,19 @@
 <body>
     <!-----------------------------header--------------------------------->
     <header class="header">
-        <div class="header__top">
-            <span class="header__logo-name">BANDSITE</span>
-        </div>
 
-        <nav class="header__navigation bottom">
+        <span class="header__logo-name">BANDSITE</span>
+        <nav class="header__navigation">
             <ul class="header__menu">
-                <li class="header__menu-item left">
-                    <a class="header__menu-item-link active" href="#">Biography</a>
+                <li class="header__menu-item">
+                    <a class="header__menu-item--link active" href="#">Biography</a>
                 </li>
-                <li class="header__menu-item right">
-                    <a class="header__menu-item-link" href="#">Shows</a>
+                <li class="header__menu-item">
+                    <a class="header__menu-item--link inactive" href="#">Shows</a>
                 </li>
             </ul>
         </nav>
+        <div class="underline"> </div>
     </header>
 
     <!-----------------------------main--------------------------------->
