--- a/index.html
+++ b/index.html
@@ -24,22 +24,23 @@
                 </li>
             </ul>
         </nav>
-        <div class="underline"> </div>
     </header>
+
+    <section class="hero">
+        <div class="cover">
+
+            <h3 class="cover__title">
+                The Bees Knees
+            </h3>
+
+        </div>
+    </section>
 
     <!-----------------------------main--------------------------------->
     <!-----------------------------hero--------------------------------->
     <main class="main">
 
-        <section class="hero">
-            <div class="cover">
 
-                <h3 class="cover__title">
-                    The Bees Knees
-                </h3>
-
-            </div>
-        </section>
         <article class="main__first">
 
             <!-----------------------------main part--------------------------------->
@@ -78,6 +79,16 @@
 
 
         <section class="main__gallery">
+
+            <img src="./assets/images/Photo-gallery-1.jpg" alt="placeholder-image" class="main-gallery__image" />
+            <img src="./assets/images/Photo-gallery-2.jpg" alt="placeholder-image" class="main-gallery__image" />
+            <img src="./assets/images/Photo-gallery-3.jpg" alt="placeholder-image" class="main-gallery__image" />
+            <img src="./assets/images/Photo-gallery-4.jpg" alt="placeholder-image" class="main-gallery__image" />
+            <img src="./assets/images/Photo-gallery-5.jpg" alt="placeholder-image" class="main-gallery__image" />
+            <img src="./assets/images/Photo-gallery-6.jpg" alt="placeholder-image" class="main-gallery__image" />
+            <img src="./assets/images/Photo-gallery-7.jpg" alt="placeholder-image" class="main-gallery__image" />
+            <img src="./assets/images/Photo-gallery-8.jpg" alt="placeholder-image" class="main-gallery__image" />
+            <img src="./assets/images/Photo-gallery-9.jpg" alt="placeholder-image" class="main-gallery__image" />
 
         </section>
 
