added images ans added changes to mixins

--- a/index.html
+++ b/index.html
@@ -26,20 +26,20 @@
         </nav>
     </header>
 
-    <section class="hero">
-        <div class="cover">
 
-            <h3 class="cover__title">
-                The Bees Knees
-            </h3>
-
-        </div>
-    </section>
 
     <!-----------------------------main--------------------------------->
     <!-----------------------------hero--------------------------------->
     <main class="main">
+        <section class="main__hero">
+            <div class="main__hero--cover">
 
+                <h3 class="main__hero--title">
+                    The Bees Knees
+                </h3>
+
+            </div>
+        </section>
 
         <article class="main__first">
 
@@ -49,7 +49,7 @@
 
             <p class="main__container--content"> "We push each other to be the best. It’s not uncommon for one of us to
                 say ‘this needs to be better, back to the
-                drawing board’"- Bryan Teddy, lead vocalist of The Bees</p>
+                drawing board’"<br>- Bryan Teddy, lead vocalist of The Bees</p>
 
         </article>
 
@@ -79,17 +79,21 @@
 
 
         <section class="main__gallery">
-
-            <img src="./assets/images/Photo-gallery-1.jpg" alt="placeholder-image" class="main-gallery__image" />
-            <img src="./assets/images/Photo-gallery-2.jpg" alt="placeholder-image" class="main-gallery__image" />
-            <img src="./assets/images/Photo-gallery-3.jpg" alt="placeholder-image" class="main-gallery__image" />
-            <img src="./assets/images/Photo-gallery-4.jpg" alt="placeholder-image" class="main-gallery__image" />
-            <img src="./assets/images/Photo-gallery-5.jpg" alt="placeholder-image" class="main-gallery__image" />
-            <img src="./assets/images/Photo-gallery-6.jpg" alt="placeholder-image" class="main-gallery__image" />
-            <img src="./assets/images/Photo-gallery-7.jpg" alt="placeholder-image" class="main-gallery__image" />
-            <img src="./assets/images/Photo-gallery-8.jpg" alt="placeholder-image" class="main-gallery__image" />
-            <img src="./assets/images/Photo-gallery-9.jpg" alt="placeholder-image" class="main-gallery__image" />
-
+            <div class="row">
+                <img src="./assets/images/Photo-gallery-1.jpg" alt="placeholder-image" class="main-gallery__image" />
+                <img src="./assets/images/Photo-gallery-2.jpg" alt="placeholder-image" class="main-gallery__image" />
+                <img src="./assets/images/Photo-gallery-3.jpg" alt="placeholder-image" class="main-gallery__image" />
+            </div>
+            <div class="row">
+                <img src="./assets/images/Photo-gallery-4.jpg" alt="placeholder-image" class="main-gallery__image" />
+                <img src="./assets/images/Photo-gallery-5.jpg" alt="placeholder-image" class="main-gallery__image" />
+                <img src="./assets/images/Photo-gallery-6.jpg" alt="placeholder-image" class="main-gallery__image" />
+            </div>
+            <div class="row">
+                <img src="./assets/images/Photo-gallery-7.jpg" alt="placeholder-image" class="main-gallery__image" />
+                <img src="./assets/images/Photo-gallery-8.jpg" alt="placeholder-image" class="main-gallery__image" />
+                <img src="./assets/images/Photo-gallery-9.jpg" alt="placeholder-image" class="main-gallery__image" />
+            </div>
         </section>
 
     </main>
@@ -114,38 +118,30 @@
         </div>
 
         <div class="footer__second">
-            <h>The Bees Knees Management </h>
-            <p> 503 Broadway Penthouse,
-
-                New York, NY 10012, USA
-
+            <h class="footer__second--title">The Bees Knees Management </h>
+            <p class="footer__second--content"> 503 Broadway Penthouse,</p>
+            <p class="footer__second--content"> New York, NY 10012, USA
                 info@thebeesknees.com</p>
         </div>
 
         <div class="footer__third">
-            <h> Limitless Artist Group</h>
-
-            <p> Booking Agent for
-
-                US / South America / Japan
-
-                pearl.gregg@limitlessag.com</p>
+            <h class="footer__third--title"> Limitless Artist Group</h>
+            <p class="footer__third--content"> Booking Agent for US / South America / Japan</p>
+            <p class="footer__third--content"> pearl.gregg@limitlessag.com</p>
 
         </div>
 
         <div class="footer__fourth">
-            ARCH Entertainment
-
-            Booking Agent for
-
-            UK / EU / AU
-
-            cwhyte@archentertainment.com
+            <h class="footer__fourth--title">ARCH Entertainment</h>
+            <p class="footer__fourth--content">Booking Agent for UK / EU / AU</p>
+            <p class="footer__fourth--content">cwhyte@archentertainment.com</p>
         </div>
 
         <div class="footer__fifth">
-
-
+            <h class="footer__fifth--title">BANDSITE</h>
+            <div class="footer__fifth--content">
+                <p> Copyright The Bees Knees &#169 2021 All Rights Reserved </p>
+            </div>
         </div>
 
     </footer>
