added last changes, end of sprint-1

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <p class="main__first--content"> "We push each other to be the best. It’s not uncommon for one of us to
                 say ‘this needs to be better, back to the
                 drawing board’"
-            <p class="main__first--author"> - Bryan Teddy, lead vocalist of The Bees</p>
+            <p class="main__first--author"> - Bryan Teddy, lead vocalist of The Bees Knees</p>
 
         </article>
 
@@ -131,13 +131,13 @@
         </div>
 
         <div class="footer__second">
-            <h class="footer__second--title bold">The Bees Knees Management </h>
+            <h class="footer__second--title bold">Cam Adams <br>The Bees Knees Management </h>
             <p class="footer__second--content"> 503 Broadway Penthouse,<br> New York, NY 10012, USA </p>
             <p class="footer__second--content">info@thebeesknees.com</p>
         </div>
 
         <div class="footer__third">
-            <h class="footer__third--title bold"> Limitless Artist Group</h>
+            <h class="footer__third--title bold"> Pearl Gregg <br>Limitless Artist Group</h>
             <br>
             <p class="footer__third--content"> Booking Agent <br> for US / South America / Japan</p>
             <p class="footer__third--content"> pearl.gregg@limitlessag.com</p>
