added show page and iframe

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/bio.css">
+
     <title>BandSite</title>
 </head>
 
@@ -21,7 +22,7 @@
                     <a class="header__menu-item--link " href="#">Biography</a>
                 </li>
                 <li class="header__menu-item">
-                    <a class="header__menu-item--link" href="#">Shows</a>
+                    <a class="header__menu-item--link" href="./pages/shows.html">Shows</a>
                 </li>
             </ul>
         </nav>
@@ -58,6 +59,7 @@
             <p class="main__first--author"> - Bryan Teddy, lead vocalist of The Bees Knees</p>
 
         </article>
+        <!-----------------------------main second--------------------------------->
 
         <article class="main__second">
             <h3 class="main__second--header"> The Bees Knees</h3>
@@ -85,12 +87,15 @@
         </article>
 
 
+        <!-----------------------------main section--------------------------------->
 
 
         <section class="main__section">
             <div class="main__section--title">
                 <h> Photo Gallery</h>
             </div>
+            <!-----------------------------gallery section--------------------------------->
+
             <section class="main__gallery center">
                 <div class="row">
                     <img src="./assets/images/Photo-gallery-1.jpg" alt="concert" class="main-gallery__image" />
@@ -111,7 +116,7 @@
         </section>
     </main>
 
-    <!-----------------------------main--------------------------------->
+    <!----------------------------- footer--------------------------------->
 
 
     <footer class="footer">
@@ -124,8 +129,8 @@
                 <a target="_blank" href="https://facebook.com/">
                     <img src="./assets/icons/Icon-facebook.svg" class="social">
                 </a>
-                <a target="_blank" href="hhtp://twitter.com">
-                    <img src="./assets/icons/Icon-twitter.svg" alt="icon-twitter" class="social">
+                <a target="_blank" href="http://twitter.com">
+                    <img src="./assets/icons/Icon-twitter.svg" class="social">
                 </a>
             </div>
         </div>
