--- a/pages/shows.html
+++ b/pages/shows.html
@@ -36,13 +36,11 @@
         <section class="main__hero">
             <img src="../assets/images/hero-shows.jpg" alt="show" class="main__hero--image">
 
-            <h3 class="main__hero--header">
-                The Bees Knees
-            </h3>
-            <div class="main__hero--cover"></div>
+            <h3 class="main__hero--header"> Beautiful Beasts Album</h3>
+            <p class="main__hero--content"> Queen of Yellow x For The Strings</p>
 
             <div class="main__hero--player">
-                <iframe width="80%" height="150" scrolling="no" frameborder="no" allow="autoplay"
+                <iframe height="140" width="100%" scrolling="no" frameborder="no" allow="autoplay"
                     src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/509639583&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
                 <div
                     style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
