--- a/index.html
+++ b/index.html
@@ -114,6 +114,24 @@
                 </div>
             </section>
         </section>
+        <div class="main__form">
+            <img src="./assets/images/Mohan-muruge.jpg" alt="man" class="main__form--img">
+
+            <form id="myForm" action="#" class="main__form--form">
+                NAME <br> <input type="text" name="fname" value="Enter your name"><br>
+                COMMENT <br><textarea rows="4" cols="50" name="comment" form="usrform">
+            Add a new comment</textarea>
+                <div class="main__form--btn">
+                    <input id="submit" type="submit" value="Comment">
+                </div>
+            </form>
+        </div>
+        <section class="main__comments">
+
+        </section>
+
+
+
     </main>
 
     <!----------------------------- footer--------------------------------->
@@ -164,7 +182,9 @@
 
     </footer>
 
+    <script src="./scripts/index-page.js">
 
+    </script>
 </body>
 
 </html>
