--- a/pages/shows.html
+++ b/pages/shows.html
@@ -19,17 +19,14 @@
         <nav class="header__navigation">
             <ul class="header__menu">
                 <li class="header__menu-item">
-                    <a class="header__menu-item--link active" href="#">Biography</a>
+                    <a class="header__menu-item--link" href="../index.html">Biography</a>
                 </li>
                 <li class="header__menu-item">
-                    <a class="header__menu-item--link" href="../pages/shows.html">Shows</a>
+                    <a class="header__menu-item--link active" href="./shows.html">Shows</a>
                 </li>
             </ul>
         </nav>
     </header>
-
-
-
     <!-----------------------------main--------------------------------->
     <!-----------------------------hero--------------------------------->
     <main class="main">
@@ -37,7 +34,7 @@
             <img src="../assets/images/hero-shows.jpg" alt="show" class="main__hero--image">
 
             <h3 class="main__hero--header"> Beautiful Beasts Album</h3>
-            <p class="main__hero--content"> Queen of Yellow x For The Strings</p>
+            <p class="main__hero--content"> Queen of Yellow x <br> For The Strings</p>
 
             <div class="main__hero--player">
                 <iframe height="140" width="100%" scrolling="no" frameborder="no" allow="autoplay"
@@ -104,7 +101,7 @@
         </div>
 
     </footer>
-
+    <script src="../scripts/build-shows-page.js"></script>
 
 </body>
 
