--- a/index.html
+++ b/index.html
@@ -114,19 +114,29 @@
                 </div>
             </section>
         </section>
+
+
         <div class="main__form">
-            <img src="./assets/images/Mohan-muruge.jpg" alt="man" class="main__form--img">
+            <div>
+                <h class="main__form--header">Join the Conversation</h>
 
-            <form id="myForm" action="#" class="main__form--form">
-                NAME <br> <input type="text" name="fname" value="Enter your name"><br>
-                COMMENT <br><textarea rows="4" cols="50" name="comment" form="usrform">
-            Add a new comment</textarea>
-                <div class="main__form--btn">
-                    <input id="submit" type="submit" value="Comment">
-                </div>
-            </form>
+                <form id="myForm" action="#" class="form">
+                    <img src="./assets/images/Mohan-muruge.jpg" alt="man" class="form__img" />
+                    <div class="form__name">NAME <br> <input type="text" name="fname" value="Enter your name"><br>
+                    </div>
+
+                    <div class="form__textarea"> COMMENT <br><textarea rows="4" cols="50" name="comment" form="usrform"
+                            class="form__textarea-item">
+            Add a new comment</textarea></div>
+                    <div class="main__form--btn">
+                        <input id="submit" type="submit" value="Comment">
+                    </div>
+                </form>
+            </div>
         </div>
+        <section class="section">
 
+        </section>
 
 
     </main>
