--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <!-----------------------------header--------------------------------->
+    <!---------------------header--------------------------------->
     <header class="header">
         <a href="./index.html" class="header__logo-name">
             <span class="header__logo-name">BANDSITE</span>
@@ -45,7 +45,7 @@
                 <div class="main__hero--cover"></div>
             </div>
         </section>
-        </div>
+
         <article class="main__first">
 
             <!-----------------------------main part--------------------------------->
@@ -91,57 +91,64 @@
 
 
         <section class="main__section">
-            <div class="main__section--title">
-                <h> Photo Gallery</h>
-            </div>
+
+            <h class="main__section--title"> Photo Gallery</h>
             <!-----------------------------gallery section--------------------------------->
 
             <section class="main__gallery center">
                 <div class="row">
-                    <img src="./assets/images/Photo-gallery-1.jpg" alt="concert" class="main-gallery__image" />
-                    <img src="./assets/images/Photo-gallery-2.jpg" alt="concert" class="main-gallery__image" />
-                    <img src="./assets/images/Photo-gallery-3.jpg" alt="concert" class="main-gallery__image" />
+                    <img src="./assets/images/Photo-gallery-1.jpg" alt="concert" class="main-gallery__image">
+                    <img src="./assets/images/Photo-gallery-2.jpg" alt="concert" class="main-gallery__image">
+                    <img src="./assets/images/Photo-gallery-3.jpg" alt="concert" class="main-gallery__image">
                 </div>
                 <div class="row">
-                    <img src="./assets/images/Photo-gallery-4.jpg" alt="concert" class="main-gallery__image" />
-                    <img src="./assets/images/Photo-gallery-5.jpg" alt="concert" class="main-gallery__image" />
-                    <img src="./assets/images/Photo-gallery-6.jpg" alt="concert" class="main-gallery__image" />
+                    <img src="./assets/images/Photo-gallery-4.jpg" alt="concert" class="main-gallery__image">
+                    <img src="./assets/images/Photo-gallery-5.jpg" alt="concert" class="main-gallery__image">
+                    <img src="./assets/images/Photo-gallery-6.jpg" alt="concert" class="main-gallery__image">
                 </div>
                 <div class="row">
-                    <img src="./assets/images/Photo-gallery-7.jpg" alt="concert" class="main-gallery__image" />
-                    <img src="./assets/images/Photo-gallery-8.jpg" alt="concert" class="main-gallery__image" />
-                    <img src="./assets/images/Photo-gallery-9.jpg" alt="concert" class="main-gallery__image" />
+                    <img src="./assets/images/Photo-gallery-7.jpg" alt="concert" class="main-gallery__image">
+                    <img src="./assets/images/Photo-gallery-8.jpg" alt="concert" class="main-gallery__image">
+                    <img src="./assets/images/Photo-gallery-9.jpg" alt="concert" class="main-gallery__image">
                 </div>
             </section>
         </section>
 
+        <h class="main__form--header">Join the Conversation</h>
 
-        <div class="main__form">
-            <div>
-                <h class="main__form--header">Join the Conversation</h>
+        <div class="form">
 
-                <form id="myForm" action="#" class="form">
-                    <img src="./assets/images/Mohan-muruge.jpg" alt="man" class="form__img" />
-                    <div class="form__name">NAME <br> <input type="text" name="fname" value="Enter your name"><br>
-                    </div>
+            <div class="form__left"> <img src="./assets/images/Mohan-muruge.jpg" alt="man" class="form__img"></div>
 
-                    <div class="form__textarea"> COMMENT <br><textarea rows="4" cols="50" name="comment" form="usrform"
-                            class="form__textarea-item">
-            Add a new comment</textarea></div>
-                    <div class="main__form--btn">
-                        <input id="submit" type="submit" value="Comment">
-                    </div>
-                </form>
-            </div>
+            <form id="myForm" action="#" class="form__right">
+
+                <div class="form__name">
+                    <label for="name"> NAME</label>
+                    <input id="name" type="text" name="userName" placeholder="Enter your name"
+                        class="form__name--item"><br>
+                </div>
+
+                <div class="form__textarea">
+                    <label for="userComment"> COMMENT</label>
+                    <textarea name="userComment" form="userForm" type="text" id="text"
+                        class="form__textarea-item"> Add a new comment</textarea>
+                </div>
+
+                <div>
+                    <input id="submit" type="submit" name="submit" class="main__form--btn">
+                </div>
+            </form>
+
         </div>
         <section class="section">
 
         </section>
 
 
+
     </main>
 
-    <!----------------------------- footer--------------------------------->
+    <!-- footer -->
 
 
     <footer class="footer">
@@ -149,13 +156,13 @@
             <h3 class="footer__first--title">Get in Touch</h3>
             <div class="footer__first--icons">
                 <a target="_blank" href="https://www.instagram.com/">
-                    <img src="./assets/icons/Icon-instagram.svg" class="social">
+                    <img src="./assets/icons/Icon-instagram.svg" class="social" alt="">
                 </a>
                 <a target="_blank" href="https://facebook.com/">
-                    <img src="./assets/icons/Icon-facebook.svg" class="social">
+                    <img src="./assets/icons/Icon-facebook.svg" class="social" alt="">
                 </a>
                 <a target="_blank" href="http://twitter.com">
-                    <img src="./assets/icons/Icon-twitter.svg" class="social">
+                    <img src="./assets/icons/Icon-twitter.svg" class="social" alt="">
                 </a>
             </div>
         </div>
@@ -183,7 +190,7 @@
         <div class="footer__fifth">
             <h class="footer__fifth--title">BANDSITE</h>
             <div class="footer__fifth--content">
-                <p> Copyright The Bees Knees &#169 2021 All Rights Reserved </p>
+                <p> Copyright The Bees Knees &#1692021 All Rights Reserved </p>
             </div>
         </div>
 
