--- a/pages/shows.html
+++ b/pages/shows.html
@@ -13,7 +13,7 @@
 <body>
     <!-----------------------------header--------------------------------->
     <header class="header">
-        <a href="./index.html" class="header__logo-name">
+        <a href="../index.html" class="header__logo-name">
             <span class="header__logo-name">BANDSITE</span>
         </a>
         <nav class="header__navigation">
@@ -37,6 +37,7 @@
             <p class="main__hero--content"> Queen of Yellow x <br> For The Strings</p>
 
             <div class="main__hero--player">
+                <!-- 
                 <iframe height="140" width="100%" scrolling="no" frameborder="no" allow="autoplay"
                     src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/509639583&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
                 <div
@@ -46,8 +47,12 @@
                         href="https://soundcloud.com/momomoyouth/blur" title="Blur" target="_blank"
                         style="color: #cccccc; text-decoration: none;">Blur</a>
                 </div>
+                -->
             </div>
         </section>
+        <h3 class="main__second">Shows</h3>
+
+        <section class="section"></section>
 
 
 
