added part with resizing function to show.js

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -50,7 +50,7 @@
                 -->
             </div>
         </section>
-        <h3 class="main__second">Shows</h3>
+        <h class="main__show">Shows</h>
 
         <section class="section"></section>
 
