added form submission, last version of working file

--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
 
                 <div class="form__textarea">
                     <label for="userComment"> COMMENT</label>
-                    <textarea name="userComment" form="userForm" type="text" id="text"
+                    <textarea id="www" name="userComment" type="text"
                         class="form__textarea-item"> Add a new comment</textarea>
                 </div>
 
                 <div>
-                    <input id="submit" type="submit" name="submit" class="main__form--btn">
+                    <button id="submit" type="submit" name="submit" class="main__form--btn">
                 </div>
             </form>
 
