added style to show section, changed hover and active states

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="main__hero--item">
 
 
-                <img src="./assets/images/hero-bio.jpg" alt="" class="main__hero--image">
+                <img src="./assets/images/hero-bio.jpg" alt="flowers" class="main__hero--image">
 
                 <h3 class="main__hero--title">
                     The Bees Knees
@@ -158,13 +158,13 @@
             <h3 class="footer__first--title">Get in Touch</h3>
             <div class="footer__first--icons">
                 <a target="_blank" href="https://www.instagram.com/">
-                    <img src="./assets/icons/Icon-instagram.svg" class="social" alt="">
+                    <img src="./assets/icons/Icon-instagram.svg" class="social" alt="social">
                 </a>
                 <a target="_blank" href="https://facebook.com/">
-                    <img src="./assets/icons/Icon-facebook.svg" class="social" alt="">
+                    <img src="./assets/icons/Icon-facebook.svg" class="social" alt="social">
                 </a>
                 <a target="_blank" href="http://twitter.com">
-                    <img src="./assets/icons/Icon-twitter.svg" class="social" alt="">
+                    <img src="./assets/icons/Icon-twitter.svg" class="social" alt="social">
                 </a>
             </div>
         </div>
