--- a/pages/shows.html
+++ b/pages/shows.html
@@ -67,10 +67,10 @@
             <h3 class="footer__first--title">Get in Touch</h3>
             <div class="footer__first--icons">
                 <a target="_blank" href="https://www.instagram.com/">
-                    <img src="../assets/icons/Icon-instagram.svg" class="social">
+                    <img src="../assets/icons/Icon-instagram.svg" class="social" alt="Icon-instagram">
                 </a>
                 <a target="_blank" href="https://facebook.com/">
-                    <img src="../assets/icons/Icon-facebook.svg" class="social">
+                    <img src="../assets/icons/Icon-facebook.svg" class="social" alt="Icon-facebook">
                 </a>
                 <a target="_blank" href="hhtp://twitter.com">
                     <img src="../assets/icons/Icon-twitter.svg" alt="icon-twitter" class="social">
