color names have been changed

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <img src="./assets/images/Mohan-muruge.jpg" alt="man" class="form__img">
             </div>
 
-            <form id="myForm" action="#" class="form__right">
+            <form id="myForm" action="" class="form__right">
 
                 <div class="form__label">
                     <label for="name" class="form__label"> NAME</label><br>
