change style of form

--- a/index.html
+++ b/index.html
@@ -114,39 +114,38 @@
             </section>
         </section>
 
+        <article class="main__form">
+            <h class="main__form--header">Join the Conversation</h>
+            <div class="form">
+                <div class="form__left">
+                    <img src="./assets/images/Mohan-muruge.jpg" alt="man" class="form__img">
+                </div>
 
-        <h class="main__form--header">Join the Conversation</h>
-        <div class="form">
+                <form id="myForm" action="" class="form__right" method="get">
 
-            <div class="form__left">
-                <img src="./assets/images/Mohan-muruge.jpg" alt="man" class="form__img">
+                    <div class="form__label">
+                        <label for="name" class="form__label"> NAME</label><br>
+                        <input id="name" type="text" name="userName" placeholder="Enter your name"
+                            class="form__name--item"><br>
+                    </div>
+
+                    <div class="form__textarea">
+                        <label for="userComment" class="form__label"> COMMENT</label> <br>
+                        <textarea id="userComment" name="userComment" type="text"
+                            class="form__textarea--item">Add a new comment</textarea>
+                    </div>
+
+                    <div class="form__button">
+                        <button id="submit" type="submit" name="submit" class="form__button--btn"> COMMENT</button>
+                    </div>
+                </form>
+
             </div>
+            <section class="section">
 
-            <form id="myForm" action="" class="form__right">
+            </section>
 
-                <div class="form__label">
-                    <label for="name" class="form__label"> NAME</label><br>
-                    <input id="name" type="text" name="userName" placeholder="Enter your name"
-                        class="form__name--item"><br>
-                </div>
-
-                <div class="form__textarea">
-                    <label for="userComment" class="form__label"> COMMENT</label> <br>
-                    <textarea id="userComment" name="userComment" type="text"
-                        class="form__textarea-item">Add a new comment</textarea>
-                </div>
-
-                <div class="form__button">
-                    <button id="submit" type="submit" name="submit" class="form__button--btn"> COMMENT</button>
-                </div>
-            </form>
-
-        </div>
-        <section class="section">
-
-        </section>
-
-
+        </article>
 
     </main>
 
