added api for show page, added chenges according to sprint-1 review

--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
     <!---------------------header--------------------------------->
     <header class="header">
         <a href="./index.html" class="header__logo-name">
-            <span class="header__logo-name">BANDSITE</span>
+            <span class="header__logo-name">
+                <img src="./assets/logos/Logo-bandsite.svg">
+            </span>
         </a>
         <nav class="header__navigation">
             <ul class="header__menu">
                 <li class="header__menu-item">
-                    <a class="header__menu-item--link " href="#">Biography</a>
+                    <a class="header__menu-item--link active" href="#">Biography</a>
                 </li>
                 <li class="header__menu-item">
                     <a class="header__menu-item--link" href="./pages/shows.html">Shows</a>
@@ -122,7 +124,7 @@
                     <img src="./assets/images/Mohan-muruge.jpg" alt="man" class="form__img">
                 </div>
 
-                <form id="myForm" action="" class="form__right" method="get">
+                <form id="myForm" action="" class="form__right" method="post">
 
                     <div class="form__label">
                         <label for="name" class="form__label"> NAME</label><br>
@@ -190,7 +192,9 @@
         </div>
 
         <div class="footer__fifth">
-            <h class="footer__fifth--title">BANDSITE</h>
+            <a class="footer__fifth--title" href="../index.html">
+                <img src="./assets/logos/Logo-bandsite.svg">
+            </a>
             <div class="footer__fifth--content">
                 <p>Copyright The Bees Knees <span>&#169</span>2021 All Rights Reserved </p>
             </div>
