--- a/pages/shows.html
+++ b/pages/shows.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/bio.css">
     <link rel="stylesheet" href="../styles/shows.css">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
     <title>BandSite</title>
 </head>
 
@@ -14,7 +16,9 @@
     <!-----------------------------header--------------------------------->
     <header class="header">
         <a href="../index.html" class="header__logo-name">
-            <span class="header__logo-name">BANDSITE</span>
+            <span class="header__logo-name">
+                <img src="../assets/logos/Logo-bandsite.svg" alt="logo-bandsite">
+            </span>
         </a>
         <nav class="header__navigation">
             <ul class="header__menu">
@@ -37,17 +41,17 @@
             <p class="main__hero--content"> Queen of Yellow x <br> For The Strings</p>
 
             <div class="main__hero--player">
-
-                <iframe height="140" width="100%" scrolling="no" frameborder="no" allow="autoplay"
-                    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/509639583&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+                <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay"
+                    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/334733635&color=%238a6c80&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
                 <div
                     style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;">
-                    <a href="https://soundcloud.com/momomoyouth" title="MØ" target="_blank"
-                        style="color: #cccccc; text-decoration: none;">MØ</a> · <a
-                        href="https://soundcloud.com/momomoyouth/blur" title="Blur" target="_blank"
-                        style="color: #cccccc; text-decoration: none;">Blur</a>
+                    <a href="https://soundcloud.com/danny-delgado-music" title="Danny Delgado" target="_blank"
+                        style="color: #cccccc; text-decoration: none;">Danny Delgado</a> · <a
+                        href="https://soundcloud.com/danny-delgado-music/imagine-dragons-thunder-danny-delgado-remix"
+                        title="Imagine Dragons - Thunder (Danny Delgado Remix)" target="_blank"
+                        style="color: #cccccc; text-decoration: none;">Imagine Dragons - Thunder (Danny Delgado
+                        Remix)</a>
                 </div>
-
             </div>
         </section>
         <h class="main__show">Shows</h>
@@ -99,7 +103,9 @@
         </div>
 
         <div class="footer__fifth">
-            <h class="footer__fifth--title">BANDSITE</h>
+            <a class="footer__fifth--title" href="../index.html">
+                <img src="../assets/logos/Logo-bandsite.svg" alt="logo-bandsite">
+            </a>
             <div class="footer__fifth--content">
                 <p> Copyright The Bees Knees &#169 2021 All Rights Reserved </p>
             </div>
